--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   </div>
   <div class="right">
     <h3 align="center">Contact Form</h3>
-    <form method="post" action="mailer.php" id="contact_form">
+    <form method="post" action="contact.php" id="contact_form">
+      <div id="form-messages"></div>
       <div class="form-group">
         <label>Hello i am:</label><br>
         <input type="text" id="name" name="name" placeholder="(your name)" required>
