--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <div class="left">
     <h3>Information</h3>
     <div class="leftTop">
-
       <span class="fa fa-map-marker"><strong> Address:</strong> lorem ipsum</span>
       <span class="fa fa-phone"><strong> Phone:</strong> 392312312</span>
       <span class="fa fa-envelope"><strong> Mail:</strong> <a href="mailto:someone@example.com" target="_blank"> Send Mail</a></span>
@@ -25,7 +24,7 @@
     <hr>
     <div class="leftBtm">
       <h3>Follow us</h3>
-      <a href="#"><img src="http://icons.iconarchive.com/icons/hopstarter/rounded-square/256/Social-Network-Facebook-icon.png" alt="facebook icon"></a>
+      <a href="#"><img src="https://icons.iconarchive.com/icons/hopstarter/rounded-square/256/Social-Network-Facebook-icon.png" alt="facebook icon"></a>
       <a href="#"><img src="https://cdn0.iconfinder.com/data/icons/Pinterest/256/Pinterest_Favicon.png" alt="pinsterest icon"></a>
       <a href="#"><img src="https://irp-cdn.multiscreensite.com/22e26da3/dms3rep/multi/mobile/instagram%20%282%29-256x256.png" alt="instagram icon"></a>
       <a href="#"><img src="https://www.techspot.com/images2/downloads/topdownload/2014/05/twitter.jpg" alt="twitter icon"></a>
@@ -33,7 +32,7 @@
   </div>
   <div class="right">
     <h3 align="center">Contact Form</h3>
-    <form method="post" action="contact.php" id="contact_form">
+    <form method="POST" action="contact.php" id="contact_form">
       <div id="form-messages"></div>
       <div class="form-group">
         <label>Hello i am:</label><br>
@@ -56,9 +55,10 @@
   </div>
 </div>
     
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="javascript/script.js"></script>
+    <script src="javascript/contact.js"></script>
 </body>
 </html>
