--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <hr>
     <div class="leftBtm">
       <h3>Follow us</h3>
-      <a href="#"><img src="https://icons.iconarchive.com/icons/hopstarter/rounded-square/256/Social-Network-Facebook-icon.png" alt="facebook icon"></a>
-      <a href="#"><img src="https://cdn0.iconfinder.com/data/icons/Pinterest/256/Pinterest_Favicon.png" alt="pinsterest icon"></a>
-      <a href="#"><img src="https://irp-cdn.multiscreensite.com/22e26da3/dms3rep/multi/mobile/instagram%20%282%29-256x256.png" alt="instagram icon"></a>
-      <a href="#"><img src="https://www.techspot.com/images2/downloads/topdownload/2014/05/twitter.jpg" alt="twitter icon"></a>
+      <a href="#"><img src="images/facebook.png" alt="facebook icon"></a>
+      <a href="#"><img src="images/pinterest.png" alt="pinsterest icon"></a>
+      <a href="#"><img src="images/instagram.png" alt="instagram icon"></a>
+      <a href="#"><img src="images/twitter.png" alt="twitter icon"></a>
     </div>
   </div>
   <div class="right">
